# ImageCrypt

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: base64.h  encodings.h  image_encode.h
src/: base64.cpp  encodings.cpp  image_encode.cpp  main.cpp
test/: test_base64.cpp  test_encodings.cpp  test_image_encode.cpp
test/fixtures/: key.txt  message.txt
